tests/type_param_variance2/type_param_variance2.exp
Error -------------------------------------------------------------------------------------------- libs/Promise.js:10:15

This name declaration overrides an existing binding `Promise` [1]. Overriding in library definitions can lead to
surprising behaviors. [libdef-override]

   libs/Promise.js:10:15
     10| declare class Promise<+R> { // intentional-libdef-override
                       ^^^^^^^

References:
   <BUILTINS>/core.js:2148:15
   2148| declare class Promise<+R = mixed> {
                       ^^^^^^^ [1]



Found 1 error
